Bug 1672529 - Honor page margins of zero when requested by an @page rule. r=jwatt, a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D94440